crates/diffler/src/ui/snapshots/diffler__ui__status__tests__folded_sections_show_headers_only.snap
---
source: crates/diffler/src/ui/status.rs
expression: render(&mut app).backend()
---
" c commit · b branch · s stage · x discard · ? help                                                                     "
" Head:     main c1ac28f initial commit                                                                                  "
" Changes   +3 -1  █████                                                                                                 "
" Languages ████████████████  Rust 50% · Markdown 25% · YAML 25%                                                         "
"                                                                                                                        "
" ▸ Untracked (1) +1 -0                                                                                                  "
"                                                                                                                        "
" ▸ Unstaged changes (1) +1 -1                                                                                           "
"                                                                                                                        "
" ▸ Staged changes (1) +1 -0                                                                                             "
"                                                                                                                        "
"▌▸ Recent commits (1)                                                                                                   "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                                                        "
" ▸ Branches (1)                                                                                                         "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" STATUS  fixture@main · mcp off · 3 files, 0 viewed                                                                     "
