crates/diffler/src/ui/snapshots/diffler__ui__status__tests__help_popup_lists_the_active_keymap_and_transient_groups.snap
---
source: crates/diffler/src/ui/status.rs
expression: terminal.backend()
---
" c commit · b branch · s stage · x discard · ? help                                                                     "
" Head:     main c1ac28f initial commit                                                                                  "
" Help: status keys ─────────────────────────────────────────────────────────────────────────────────────────────────────"
"Actions                                                                                                                 "
" V  select several rows                               c  Commit …                                                       "
" j  move down                                           c  Commit                                                       "
" k  move up                                             e  Extend                                                       "
" gg  go to top                                          a  Amend                                                        "
" G  go to bottom                                        w  Reword                                                       "
" <c-d>  scroll down half a page                       b  Branch …                                                       "
" <c-u>  scroll up half a page                           b  Checkout branch                                              "
" m  mark this file or folder as viewed                  c  Create and checkout                                          "
" <c-n>  jump to the next section                        n  Create                                                       "
" <c-p>  jump to the previous section                    D  Delete                                                       "
" <tab>  fold or unfold the item under the cursor        p  Pull requests                                                "
" s  stage file or hunk                                  P  Open a pull request                                          "
" u  unstage file or hunk                              d  Diff against …                                                 "
" S  stage everything                                    d  Base branch                                                  "
" U  unstage everything                                  c  Last commit                                                  "
" x  discard the changes under the cursor                b  A branch                                                     "
" <c-r>  reload                                          s  A commit from the log                                        "
" <cr>  open the item under the cursor                   w  HEAD (working tree)                                          "
" D  review all uncommitted changes                    l  Log …                                                          "
" T  change the theme                                    l  Current branch                                               "
" o  see CI runs                                       P  Push …                                                         "
" [  jump to the previous section                        p  Push                                                         "
" ]  jump to the next section                            u  Push and set upstream                                        "
" e  open this file in your editor                     p  Pull …                                                         "
" <c-g>  edit this text in your editor                   p  Pull                                                         "
" gf  find a file in the repository                    f  Fetch …                                                        "
" B  blame this file: see who last changed each line     f  Fetch                                                        "
" L  see lines of code per language                      a  Fetch all remotes                                            "
" y  copy the web link                                 z  Stash …                                                        "
" Z  send your comments to the waiting agent             z  Stash changes                                                "
" /  search                                              p  Pop latest stash                                             "
" n  go to the next match                              <a-l>  switch to the next project                                 "
" N  go to the previous match                          <a-h>  switch to the previous project                             "
" <c-k>  search all commands                           <a-n>  add a project as a tab                                     "
" ?  show the keys                                     <a-w>  close this project                                         "
" q  go back                                           <a-1>-<a-9>  switch to project tab N                              "
