crates/diffler/src/ui/snapshots/diffler__ui__status__tests__help_popup_lists_the_active_keymap_over_status.snap
---
source: crates/diffler/src/ui/status.rs
expression: terminal.backend()
---
" Hint: <tab> toggle  s stage  u unstage  x discard  cc commit  ? help                                                   "
" Head:     main c1ac28f initial commit                                                                                  "
" Changes   +3 -1  █████                                                                                                 "
"                                                                                                                        "
" ▾ Untracked (1) +1 -0                                                                                                  "
"     ? todo.md +1 -0                                                                                                    "
"                                                                                                                        "
" ▾ Unstaged changes (1) +1 -1                                                                                           "
"     ▾ src                                                                                                              "
"       M lib.rs +1 -1                                                                                                   "
"                                                                                                                        "
" ▾ Staged changes (1) +1 -0                                                                                             "
"     A ci.yml +1 -0                                                                                                     "
" Help — status keys ────────────────────────────────────────────────────────────────────────────────────────────────────"
"Actions                                                                                                                 "
" j  move_down                                                                                                           "
" k  move_up                                                                                                             "
" gg  go_top                                                                                                             "
" G  go_bottom                                                                                                           "
" v  mark_viewed                                                                                                         "
" <c-n>  next_section                                                                                                    "
" <c-p>  prev_section                                                                                                    "
" <tab>  toggle_fold                                                                                                     "
" s  stage                                                                                                               "
" u  unstage                                                                                                             "
" S  stage_all                                                                                                           "
" U  unstage_all                                                                                                         "
" x  discard                                                                                                             "
" <c-r>  refresh                                                                                                         "
" <cr>  open                                                                                                             "
" D  open_review_diff                                                                                                    "
" cc  commit_flow                                                                                                        "
" b  branch_popup                                                                                                        "
" ll  log_view                                                                                                           "
" {  prev_hunk                                                                                                           "
" }  next_hunk                                                                                                           "
" e  open_editor                                                                                                         "
" Z  send_feedback                                                                                                       "
" ?  help                                                                                                                "
" q  back                                                                                                                "
