crates/diffler/src/ui/snapshots/diffler__ui__status__tests__palette_filtered.snap
---
source: crates/diffler/src/ui/status.rs
expression: render(&mut app).backend()
---
" c commit · b branch · s stage · x discard · ? help                                                                     "
" Head:     main c1ac28f initial commit                                                                                  "
" Changes   +3 -1  █████                                                                                                 "
" Languages ████████████████  Rust 50% · Markdown 25% · YAML 25%                                                         "
"                                                                                                                        "
"▌▾ Untracked (1) +1 -0                                                                                                  "
" ○ todo.md +1 -0                                                                                                        "
"                                                                                                                        "
" ▾ Unstaged changes (1) +1 -1                                                                                           "
" ● src/lib.rs +1 -1                                                                                                     "
"                                                                                                                        "
" ▾ Staged changes (1) +1 -0                                                                                             "
" + ci.yml +1 -0                                                                                                         "
"                                                                                                                        "
" ▸ Recent commits (1)                                                                                                   "
"                                                                                                                        "
"─────────────────────── Commands ───────────────────────────────────────────────────────────────────────────────────────"
"                        > amend                                                                                         "
" ▸ Branches (1)         amend the last commit with staged changes and edit its message    c a                           "
"                        review all uncommitted changes                                      D                           "
"                        extend the last commit with staged changes, keeping its message   c e                           "
"                        blame this file: see who last changed each line                     B                           "
"                        type to filter · enter run · tab list · esc close                                               "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" STATUS  fixture@main · mcp off · 3 files, 0 viewed                                                                     "
