crates/diffler/src/ui/snapshots/diffler__ui__status__tests__palette_open.snap
---
source: crates/diffler/src/ui/status.rs
expression: render(&mut app).backend()
---
" c commit · b branch · s stage · x discard · ? help                                                                     "
" Head:     main c1ac28f initial Commands ────────────────────────────────────────────────                               "
" Changes   +3 -1  █████         >                                                                                       "
" Languages ████████████████  Ru select a range of rows                               V                                  "
"                                move down                                            j                                  "
"▌▾ Untracked (1) +1 -0          move up                                              k                                  "
" ○ todo.md +1 -0                go to top                                           gg                                  "
"                                go to bottom                                         G                                  "
" ▾ Unstaged changes (1) +1 -1   half page down                                   <c-d>                                  "
" ● src/lib.rs +1 -1             half page up                                     <c-u>                                  "
"                                mark the file or folder viewed                       m                                  "
" ▾ Staged changes (1) +1 -0     next section                                     <c-n>                                  "
" + ci.yml +1 -0                 previous section                                 <c-p>                                  "
"                                toggle the fold under the cursor                 <tab>                                  "
" ▸ Recent commits (1)           stage file or hunk                                   s                                  "
"                                unstage file or hunk                                 u                                  "
"─────────────────────────────── stage everything                                     S   ───────────────────────────────"
"                                unstage everything                                   U                                  "
" ▸ Branches (1)                 discard changes                                      x                                  "
"                                refresh                                          <c-r>                                  "
"                                open the item under the cursor                    <cr>                                  "
"                                open the full working-tree diff                      D                                  "
"                                switch the theme                                     T                                  "
"                                open CI runs                                         o                                  "
"                                previous section                                     [                                  "
"                                next section                                         ]                                  "
"                                open in $EDITOR                                      e                                  "
"                                edit the focused text box in $EDITOR             <c-g>                                  "
"                                find a file in the repository                       gf                                  "
"                                blame this file                                      B                                  "
"                                language breakdown                                   L                                  "
"                                copy the web URL                                     y                                  "
"                                send feedback to waiting agents                      Z                                  "
"                                search                                               /                                  "
"                                next search match                                    n                                  "
"                                previous search match                                N                                  "
"                                command palette                                  <c-k>                                  "
"                                type to filter · enter run · tab list · esc close                                       "
"                                                                                                                        "
" STATUS  fixture@main · mcp off · 3 files, 0 viewed                                                                     "
